# Spiel

./: CMakeLists.txt  EnemyRassen  Enemynames  README.md  allyKlassen  allyRassen  database.json  main.cpp
src/: main.cpp
